<resources>
    <string name="app_name">Aisle 9b</string>
    <string name="grocery_screen">Grocery Screen</string>
    <string name="empty_list_message">Your Grocery List is currently empty!</string>
    <string name="transfer_custom_list_description">transfer saved list button</string>
    <string name="transfer_meal_description">transfer meals button</string>
    <string name="add_meal_to_grocery_list">Add Meal to Grocery List</string>
    <string name="load_saved_grocery_list">Load Saved Grocery List</string>
</resources>