...
    ) {
        Box(modifier = Modifier.weight(.7f)) {
            CustomAutoComplete9(
                viewModel = viewModel,
                value = item,
                setValue = { item = it },
                label = "Add grocery"
            )
        }
        Spacer(modifier = Modifier.width(10.dp))
        Card(
            modifier = Modifier.weight(.4f),
            elevation = CardDefaults.cardElevation(defaultElevation = 5.dp),
            shape = RoundedCornerShape(3.dp)
        ) {
            CustomTextField9(
                modifier = Modifier
                    .height(45.dp)
                    .fillMaxWidth()
                    .semantics { contentDescription = "Grocery quantity" },
                text = quantity,
                onValueChange = { quantity = it },
                label = "#",
                colors = TextFieldDefaults.colors(
                    focusedContainerColor = MaterialTheme.colorScheme.secondaryContainer,
                    unfocusedContainerColor = MaterialTheme.colorScheme.secondaryContainer,
...
